--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "R.J. Freund",
   "license": "ISC",
   "dependencies": {
-    "animejs": "^3.2.2"
+    "animejs": "^3.2.2",
+    "gsap-trial": "^3.12.5"
   }
 }
